# hello_robot

./: Cargo.toml  LICENSE  README.md
src/: main.rs  state.rs
src/bus/: event.rs  event_bus.rs
src/hal/: camera.rs  ldr.rs  mod.rs  motor.rs  neopixel.rs  servo.rs  ultrasound.rs
src/nodes/: behaviour.rs  camera.rs  ldr.rs  leds.rs  mod.rs  motor.rs  servo.rs  telemetry_bridge.rs  ultrasound.rs  web.rs
static/: robot.css
templates/: index.html
